# dadb

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
dadb/: __init__.py  _common.py  _data.py  _database.py  _datatype.py  _exceptions.py  _model.py  _model_definition.py  _schema.py
dadb/models/: __init__.py  archivemodel.py  decompressmodel.py  filemodel.py  fileparentmodel.py  filesetmodel.py  libmagicmodel.py  stringsmodel.py  zipmodel.py
dadb/test/: helpers.py  test_data.py  test_database.py  test_datatype.py  test_models.py
